# ChangeLog for dev-libs/beecrypt
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/beecrypt/ChangeLog,v 1.60 2008/09/25 09:19:37 aballier Exp $

  25 Sep 2008; Alexis Ballier <aballier@gentoo.org>
  beecrypt-4.1.2-r2.ebuild:
  keyword ~x86-fbsd

  29 Apr 2008; Alexis Ballier <aballier@gentoo.org>
  beecrypt-4.1.2-r2.ebuild:
  Convert to latex-base, fix deps with texlive, bug #213707

  13 Jan 2008; Mike Frysinger <vapier@gentoo.org> beecrypt-4.1.2-r1.ebuild,
  beecrypt-4.1.2-r2.ebuild:
  Do not let the configure script decide the lib64. Make it respect the
  standard configure --libdir option.

  02 Jun 2007; Alon Bar-Lev <alonbl@gentoo.org>
  -files/beecrypt-3.1.0-alpha.patch, -files/beecrypt-3.1.0-athlon.diff,
  -files/beecrypt-3.1.0-python2.3.patch, -beecrypt-3.1.0-r2.ebuild:
  Remove old ebuilds

  02 Jun 2007; Joshua Kinard <kumba@gentoo.org> beecrypt-4.1.2-r1.ebuild:
  Stable on mips, per #157858.

  05 Mar 2007; Sandro Bonazzola <sanchan@gentoo.org> ChangeLog:
  Removing myself from metadata.xml as I'm stepping back.

  07 Feb 2007; Sandro Bonazzola <sanchan@gentoo.org>
  beecrypt-4.1.2-r1.ebuild, beecrypt-4.1.2-r2.ebuild:
  Replace flag pentium4m with pentium4, fix bug #165635. Thanks to Jiri
  Pittner <jiri.pittner@jh-inst.cas.cz> for reporting and to Jackub Moc for
  his patience.

  24 Jan 2007; Alec Warner <antarus@gentoo.org> beecrypt-4.1.2-r2.ebuild:
  fix minor bug with USE=doc, bug # 163375

*beecrypt-4.1.2-r2 (22 Jan 2007)

  22 Jan 2007; Sandro Bonazzola <sanchan@gentoo.org>
  +files/beecrypt-4.1.2-base64.patch, -beecrypt-3.1.0-r1.ebuild,
  +beecrypt-4.1.2-r2.ebuild:
  New doc use flag for doxygen api documentation. Including a patch from
  Miloslav Trmac <mitr@redhat.com> from Fedora beecrypt rpm: fix b64encode()
  for data starting with NUL.
  Removed obsolete ebuild. Waiting mips stabilization for removing latest 3.x
  series ebuild.
