@@ -5,6 +5,6 @@ AUX beecrypt-4.1.2-python-Makefile-am.patch 311 RMD160 dd271f87a2cff9042007e69e1
 AUX beecrypt-4.1.2-python-debug-py-c.patch 887 RMD160 414bc978cae368facdcb6fbaae9f80edd1c2ec16 SHA1 b53bed1526ffd3671955558461d5059ed9c912ed SHA256 4a31c4f7591334e9ea1dffc314f924e6379aed2818ce95c85e3f970054538c98
 AUX beecrypt-4.1.2-threads.patch 2142 RMD160 96b4dc0ebd5bc28228e063987987f3db2817621a SHA1 f3e252258a3d4e253df3735951ae3dfaff2f6132 SHA256 c8bdc84848ec24330fd3973fb84cef2eaaa1d8e845039dc5a0d0f6bc4c4345da
 DIST beecrypt-4.1.2.tar.gz 774280 RMD160 fe26e5429738450fa2ef00b37e9725eec29bda08 SHA1 71cebd3329bb2561ffba24a2004dfac50b143f59 SHA256 f29eb246947677a9e7870521e3d576fd0d91a7072210a4404ed137e40cfc18fd
-EBUILD beecrypt-4.1.2-r2.ebuild 2543 RMD160 3e012fda737f666ab916d92b94277b65a0db94b4 SHA1 a01b01b4a3b8b09c3074b28d3216200c9678bfd5 SHA256 556c989d6edcf10900798cf2be6e78a2130084d1b657220da4a5273152333014
-MISC ChangeLog 9819 RMD160 c044eeb6f72b1836894c2a5ee537142309dd5113 SHA1 b440da10bb5193ed3b691a8bead954cceb2a687c SHA256 a1906e1f678509c52d7133c7012d4a34b6c2faf8cea113f3776585c601d1b10f
+EBUILD beecrypt-4.1.2-r2.ebuild 2523 RMD160 71aa5514c7cbdd63980d688dbe15e11f1d0b1dbe SHA1 d5f1821bcb46e7aa07dd091f657c244ad4f15bc5 SHA256 421d8532ebde3bfbcc211dea3a13157815b06a6a464b691cb9a258ccf85e36e1
+MISC ChangeLog 9943 RMD160 3400b967b2f978245c4bc0136f200de4a32fc354 SHA1 8381b9bcab3cb8f4bb008ef9064378d5cde998e8 SHA256 dc78ed0b4865fc952d2658057680babfdf01536b4dc5fb6c45040ec48b71bd91
 MISC metadata.xml 231 RMD160 c13056229989c3d4f448a7c7abcff3f4ee7ce13c SHA1 2d63dfb700b223f8f37c078692a81b2237896bce SHA256 4595c2615fd7c9095517949b1a920d4457f92801eb9d46307b18aafe58ec2a8a
